--- a/src/app/test1/test1.component.css
+++ b/src/app/test1/test1.component.css
@@ -12,3 +12,21 @@
     background: #94e1b1;
     padding: 0 1rem;
   }
+
+  .inner-row {
+    display: flex;
+    height: 100%;
+    gap: 1%;
+    align-content: space-evenly;
+
+  }
+  
+  .inner-column {
+    flex: 45%;
+    padding: 1%;
+    height: 150px;
+    display: inline-block;
+    align-self: flex-end;
+    overflow-y: auto;
+  }
+
